(feat): modified auth
